Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18661

DcpConsumer's step function is not called when it's supposed to be

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 4.5.0
    • 4.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • Yes

    Description

      Processing items at the consumer has been changed in watson. Items are processed immediately rather than be buffered, if the buffer is found to be empty. With this immediate processing of items, memcached needs to be notified to visit the consumer's step() to send the buffer ACK to the producer whenever flow control registers processed items.

      Attachments

        For Gerrit Dashboard: MB-18661
        # Subject Branch Project Status CR V

        Activity

          People

            abhinav Abhi Dangeti
            abhinav Abhi Dangeti
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty