MB-18661: DcpConsumer to ACK back whenever necessary

With immediate processing of received items at the consumer,
memcached needs to be notified to visit the consumer's
step function to send buffer acknowledgement to the producer,
whenever data is processed.

Change-Id: I5c0c90a0018ce662746fce46ae68e4a5f604ca60
Reviewed-on: http://review.couchbase.org/61295
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: buildbot <build@couchbase.com>